k8s/orders-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-api-deployment
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-api
  template:
    metadata:
     labels:
       app: orders-api
    spec:
      containers:
        - name: orders-api
          image: straxseller/orders-api:v0.1
          imagePullPolicy: IfNotPresent
          name: orders-api
          ports:
            - containerPort: 80
