k8s/orders-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-api-service
  namespace: app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: orders-api
